# fluid_simulation_2d

./: Cargo.toml
assets/shaders/: particle_material.wgsl  velocity_color_shader.wgsl
src/: bounding_box.rs  camera.rs  fluid_simulation combinations.rs  fluid_simulation.rs  fluid_simulation_arrays.rs  fluid_simulation_arrays_parallel.rs  fluid_simulation_shaders.rs  main.rs  ui_debug.rs  world.rs
